// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelGuidance component should correctly render the component for templateType EMAIL 1`] = `
<DocumentFragment>
  <h2
    class="nhsuk-heading-m"
  >
    More about emails
  </h2>
  <ul
    style="list-style-type: none; padding: 0px;"
  >
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/features/emails"
        target="_blank"
      >
        Email messages (opens in a new tab)
      </a>
    </li>
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/using-nhs-notify/tell-recipients-who-your-messages-are-from"
        target="_blank"
      >
        From and reply-to addresses (opens in a new tab)
      </a>
    </li>
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/using-nhs-notify/delivery-times"
        target="_blank"
      >
        Delivery times (opens in a new tab)
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ChannelGuidance component should correctly render the component for templateType NHS_APP 1`] = `
<DocumentFragment>
  <h2
    class="nhsuk-heading-m"
  >
    More about NHS App messages
  </h2>
  <ul
    style="list-style-type: none; padding: 0px;"
  >
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/features/nhs-app-messages"
        target="_blank"
      >
        NHS App messages (opens in a new tab)
      </a>
    </li>
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/using-nhs-notify/tell-recipients-who-your-messages-are-from"
        target="_blank"
      >
        Sender IDs (opens in a new tab)
      </a>
    </li>
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/using-nhs-notify/delivery-times"
        target="_blank"
      >
        Delivery times (opens in a new tab)
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ChannelGuidance component should correctly render the component for templateType SMS 1`] = `
<DocumentFragment>
  <h2
    class="nhsuk-heading-m"
  >
    More about text messages
  </h2>
  <ul
    style="list-style-type: none; padding: 0px;"
  >
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/pricing/text-messages"
        target="_blank"
      >
        Text message length and pricing (opens in a new tab)
      </a>
    </li>
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/using-nhs-notify/tell-recipients-who-your-messages-are-from"
        target="_blank"
      >
        Sender IDs (opens in a new tab)
      </a>
    </li>
    <li
      class="nhsuk-u-margin-bottom-3"
    >
      <a
        href="https://notify.nhs.uk/using-nhs-notify/delivery-times"
        target="_blank"
      >
        Delivery times (opens in a new tab)
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
